RM#8168 Sequence : refactor code field

--- a/axelor-base/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-base/src/main/resources/i18n/messages_fr.csv
@@ -471,7 +471,6 @@
 "Convert",,,
 "Convert demo file",,,
 "Convert into an individual partner","Convertir en un individu",,
-"Copy","Copier",,
 "Cost price","Coût revient",,
 "Cost type","Type de coût",,
 "Costs","Coûts",,
@@ -1358,6 +1357,7 @@
 "Specify whether the members of this group are technical staff.",,,
 "Specify whether to block the user for an indefinite period.","Bloquer l’utilisateur pendant une période indéterminée",,
 "Split by",,,
+"Standard",,,
 "Standards",,,
 "Start Date","Date de début",,
 "Start date","Date de début",,
