--- a/axelor-base/src/main/resources/i18n/messages.csv
+++ b/axelor-base/src/main/resources/i18n/messages.csv
@@ -471,7 +471,6 @@
 "Convert",,,
 "Convert demo file",,,
 "Convert into an individual partner",,,
-"Copy",,,
 "Cost price",,,
 "Cost type",,,
 "Costs",,,
@@ -1358,6 +1357,7 @@
 "Specify whether the members of this group are technical staff.",,,
 "Specify whether to block the user for an indefinite period.",,,
 "Split by",,,
+"Standard",,,
 "Standards",,,
 "Start Date",,,
 "Start date",,,
