RM#34454 Helpdesk> SLA dashboards - changes

--- a/axelor-helpdesk/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-helpdesk/src/main/resources/i18n/messages_fr.csv
@@ -11,7 +11,7 @@
 "80 %",,,
 "90 %",,,
 "ALL","Tous",,
-"All SLA","Chartes SLA",,
+"All SLA","Tous les SLAs",,
 "All ticket types",,,
 "All tickets","Tous les tickets",,
 "App helpdesk","App Support client",,
