--- a/axelor-contract/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-contract/src/main/resources/i18n/messages_fr.csv
@@ -17,6 +17,7 @@
 "Analytic move lines","Lignes d’écriture analytique",,
 "Analytics","Analytiques",,
 "App contract","Application contrat",,
+"Assigned To","Assigné à",,
 "Attention the contract will have as starting date the provisional activation         date ${currentContractVersion.supposedActivationDate}, Are you sure?","Attention le contrat aura comme date de début la date d'activation prévisionnelle ${currentContractVersion.supposedActivationDate}, etes-vous sur?",,
 "Auto enable version on renew","Activer automatiquement la version au renouvellement",,
 "Automatic invoicing","Facturation automatique",,
@@ -42,6 +43,8 @@
 "Contract Line","Ligne de contrat",,
 "Contract Lines","Lignes de contrat",,
 "Contract N°","N° de contrat",,
+"Contract Reminder Mail Template","Mail Template des rappels de la date de fin des contrats",,
+"Contract Type",,,
 "Contract batch","Batch de contrat",,
 "Contract batch filters",,,
 "Contract batches","Batchs de contrat",,
@@ -66,6 +69,7 @@
 "Customer","Client",,
 "Customer contracts","Contrat client",,
 "Date","Date",,
+"Days","Jours",,
 "Delete next version","Supprimer prochaine version",,
 "Description","Description",,
 "Displayed Product name","Libellé produit",,
@@ -73,6 +77,7 @@
 "Do you really wish to fill your contract based on this template ?","Souhaitez-vous vraiment remplir votre contrat sur la base de ce modèle?",,
 "Draft","Brouillon",,
 "Duration","Durée",,
+"Duration Type","Type durée",,
 "Durations","Durées",,
 "End date","Date de fin",,
 "End of next invoicing period","Fin de la prochaine période de facturation",,
@@ -111,6 +116,7 @@
 "Linked invoice","Facture liée",,
 "Manage invoices","Gestion de la facturation",,
 "Meta file","Fichier méta",,
+"Months","Mois",,
 "Name","Nom",,
 "New version","Nouvelle version",,
 "Next Invoice Additional Benefit","Prestations additionelles",,
@@ -149,11 +155,13 @@
 "Qty","Qté",,
 "Quantity","Quantité",,
 "Reference","Référence",,
+"Reminder end of contracts",,,
 "Renew","Renouveler",,
 "Renewal","Renouvellement",,
 "Renewal duration","Durée de renouvellement",,
 "Renewal management","Gestion des renouvellements",,
 "Run batch","Lancer le traitement de masse",,
+"Schedule Event","Programmer évènement",,
 "Search","Rechercher",,
 "Sequence","Séquence",,
 "Show contract","Voir le contrat",,
@@ -170,6 +178,7 @@
 "Supposed end date","Date de fin prévisionnelle",,
 "Tacit renewal","Renouvellement tacite",,
 "Tax","Taxe",,
+"Template is not defined.",,,
 "Terminate","Résilier",,
 "Terminated","Clôturé",,
 "Terminated By","Résilié par",,
@@ -194,6 +203,7 @@
 "Version history","Historique des versions",,
 "Versions","Versions",,
 "Waiting","En attente",,
+"Weeks","Semaines",,
 "With engagement","Avec engagement",,
 "With prior notice","Avec préavis",,
 "You cannot remove a line which has been already invoiced.","Vous ne pouvez pas supprimer une ligne qui a été facturé.",,
