--- a/axelor-crm/src/main/resources/i18n/messages.csv
+++ b/axelor-crm/src/main/resources/i18n/messages.csv
@@ -2,6 +2,9 @@
 "%d times",,,
 "+33000000000",,,
 "+33100000000",,,
+"100%",,,
+"50%",,,
+"75%",,,
 "<a class='fa fa-facebook' href='http://www.facebook.com' target='_blank' />",,,
 "<a class='fa fa-google' href='http://www.google.com' target='_blank' />",,,
 "<a class='fa fa-linkedin' href='http://www.linkedin.com' target='_blank' />",,,
@@ -284,6 +287,7 @@
 "Meetings number historical",,,
 "Meetings number target completed (%)",,,
 "Memo",,,
+"Minimum amount top opportunities",,,
 "Minutes",,,
 "Mo",,,
 "Mobile N°",,,
@@ -503,6 +507,7 @@
 "Title",,,
 "To Date",,,
 "Tools",,,
+"Top opportunities",,,
 "Trading name",,,
 "Treated objectives reporting",,,
 "Tu",,,
