--- a/axelor-crm/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-crm/src/main/resources/i18n/messages_fr.csv
@@ -2,6 +2,9 @@
 "%d times","%d fois",,
 "+33000000000",,,
 "+33100000000",,,
+"100%",,,
+"50%",,,
+"75%",,,
 "<a class='fa fa-facebook' href='http://www.facebook.com' target='_blank' />",,,
 "<a class='fa fa-google' href='http://www.google.com' target='_blank' />",,,
 "<a class='fa fa-linkedin' href='http://www.linkedin.com' target='_blank' />",,,
@@ -284,6 +287,7 @@
 "Meetings number historical","Historique Nbre Rendez-vous",,
 "Meetings number target completed (%)","Objectif Nbre de Rdv réalisés (%)",,
 "Memo","Mémo",,
+"Minimum amount top opportunities","Montant minimum Top opportunités",,
 "Minutes","Minutes",,
 "Mo","Lu",,
 "Mobile N°","N° Mobile",,
@@ -503,6 +507,7 @@
 "Title","Intitulé",,
 "To Date","A",,
 "Tools","Outils",,
+"Top opportunities","Top opportunités",,
 "Trading name","Enseigne",,
 "Treated objectives reporting","Configuration des objectifs(s) traité(s)",,
 "Tu","Ma",,
