--- a/axelor-contract/src/main/resources/i18n/messages_en.csv
+++ b/axelor-contract/src/main/resources/i18n/messages_en.csv
@@ -17,6 +17,7 @@
 "Analytic move lines",,,
 "Analytics",,,
 "App contract",,,
+"Assigned To",,,
 "Attention the contract will have as starting date the provisional activation         date ${currentContractVersion.supposedActivationDate}, Are you sure?",,,
 "Auto enable version on renew",,,
 "Automatic invoicing",,,
@@ -42,6 +43,8 @@
 "Contract Line",,,
 "Contract Lines",,,
 "Contract N°",,,
+"Contract Reminder Mail Template",,,
+"Contract Type",,,
 "Contract batch",,,
 "Contract batch filters",,,
 "Contract batches",,,
@@ -66,6 +69,7 @@
 "Customer",,,
 "Customer contracts",,,
 "Date",,,
+"Days",,,
 "Delete next version",,,
 "Description",,,
 "Displayed Product name",,,
@@ -73,6 +77,7 @@
 "Do you really wish to fill your contract based on this template ?",,,
 "Draft",,,
 "Duration",,,
+"Duration Type",,,
 "Durations",,,
 "End date",,,
 "End of next invoicing period",,,
@@ -111,6 +116,7 @@
 "Linked invoice",,,
 "Manage invoices",,,
 "Meta file",,,
+"Months",,,
 "Name",,,
 "New version",,,
 "Next Invoice Additional Benefit",,,
@@ -149,11 +155,13 @@
 "Qty",,,
 "Quantity",,,
 "Reference",,,
+"Reminder end of contracts",,,
 "Renew",,,
 "Renewal",,,
 "Renewal duration",,,
 "Renewal management",,,
 "Run batch",,,
+"Schedule Event",,,
 "Search",,,
 "Sequence",,,
 "Show contract",,,
@@ -170,6 +178,7 @@
 "Supposed end date",,,
 "Tacit renewal",,,
 "Tax",,,
+"Template is not defined.",,,
 "Terminate",,,
 "Terminated",,,
 "Terminated By",,,
@@ -194,6 +203,7 @@
 "Version history",,,
 "Versions",,,
 "Waiting",,,
+"Weeks",,,
 "With engagement",,,
 "With prior notice",,,
 "You cannot remove a line which has been already invoiced.",,,
