--- a/axelor-base/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-base/src/main/resources/i18n/messages_fr.csv
@@ -1427,7 +1427,6 @@
 "Reference","Référence",,
 "Reference Id","Id Référence",,
 "Referential","Référentiel",,
-"Refresh page to reflect changes in selection","Rafraîchir la page pour faire apparaître les changements dans la sélection.",,
 "Refund blocking","Blocage remboursement",,
 "Region","Région",,
 "Region code","Code Région",,
@@ -1678,6 +1677,7 @@
 "Test connection","Tester connexion",,
 "Test connection to QAS webservice","Tester la connexion vers le service web QAS",,
 "Test mapping service connection","Tester le service de connexion",,
+"Test template",,,
 "Testing","Recette",,
 "Text Alignment","Alignement du texte",,
 "The analysis must be completed before the report can be printed.","La classification doit être terminée avant que le rapport ne puisse être généré",,
