--- a/axelor-message/src/main/resources/i18n/messages.csv
+++ b/axelor-message/src/main/resources/i18n/messages.csv
@@ -1,6 +1,7 @@
 "key","message","comment","context"
 "%d messages has been regenerated successfully and %d errors append.",,,
 "Add Signature",,,
+"Add to reference selection",,,
 "Address",,,
 "Address Block",,,
 "All messages",,,
@@ -35,6 +36,7 @@
 "From",,,
 "From email address",,,
 "From email name",,,
+"Generate Message",,,
 "Generate message",,,
 "Groovy Template",,,
 "Group",,,
@@ -77,6 +79,9 @@
 "Recipients",,,
 "Record Id",,,
 "Record Name",,,
+"Reference",,,
+"Reference Id",,,
+"Refresh page to reflect changes in selection",,,
 "Regenerate messages",,,
 "Related to",,,
 "Related to1 select",,,
@@ -84,6 +89,7 @@
 "Reply to",,,
 "Resend messages",,,
 "Routings",,,
+"SMS",,,
 "SMTP",,,
 "SSL",,,
 "SSL/STARTTLS",,,
@@ -92,8 +98,8 @@
 "Send",,,
 "Sender (User)",,,
 "Sender's email address is null or empty",,,
+"SendinBlue API key",,,
 "SendinBlue identification",,,
-"Sendingblue API key",,,
 "Sent",,,
 "Sent by email",,,
 "Sent date",,,
@@ -113,9 +119,11 @@
 "Templates",,,
 "Temporary email service only support Email media type.",,,
 "Test connection",,,
+"Test template",,,
 "The email template model (%s) is different than the entity generating the email (%s)",,,
 "There is already a default account",,,
 "There is no default email account",,,
+"Thread ID",,,
 "To",,,
 "Type",,,
 "Unable to reach server. Please check Host,Port and SSL/TLS",,,
