--- a/axelor-message/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-message/src/main/resources/i18n/messages_fr.csv
@@ -1,6 +1,7 @@
 "key","message","comment","context"
 "%d messages has been regenerated successfully and %d errors append.","%d messages regénérés avec succès et %d erreurs.",,
 "Add Signature","Ajouter une signature",,
+"Add to reference selection",,,
 "Address","Adresse email",,
 "Address Block","Bloc d'adresse",,
 "All messages","Tous les messages",,
@@ -35,6 +36,7 @@
 "From","De",,
 "From email address","Adresse email utilisée pour l'envoi",,
 "From email name","Nom utilisé pour l'envoi",,
+"Generate Message",,,
 "Generate message","Générer message",,
 "Groovy Template","Modèle groovy",,
 "Group","Groupe",,
@@ -77,6 +79,9 @@
 "Recipients","Destinataires",,
 "Record Id","Id Enregistrement",,
 "Record Name","Nom Enregistrement",,
+"Reference",,,
+"Reference Id",,,
+"Refresh page to reflect changes in selection","Rafraîchir la page pour faire apparaître les changements dans la sélection.",,
 "Regenerate messages","Regénérer les messages",,
 "Related to","Associé à ",,
 "Related to1 select","Lié à (1) sélection",,
@@ -84,6 +89,7 @@
 "Reply to","Répondre à",,
 "Resend messages","Renvoyer les messages",,
 "Routings","Routage",,
+"SMS",,,
 "SMTP","SMTP",,
 "SSL","SSL",,
 "SSL/STARTTLS",,,
@@ -92,8 +98,8 @@
 "Send","Envoyer",,
 "Sender (User)","Expéditeur (Utilisateur)",,
 "Sender's email address is null or empty","L’adresse email du destinataire est non-renseignée ou vide.",,
-"SendinBlue identification","Identification SendinBlue",,
 "SendinBlue API key","Clé API SendinBlue",,
+"SendinBlue identification","Identification SendinBlue",,
 "Sent","Envoyé",,
 "Sent by email","Envoyé par email",,
 "Sent date","Date d'envoi",,
@@ -113,9 +119,11 @@
 "Templates","Modèles",,
 "Temporary email service only support Email media type.",,,
 "Test connection","Tester connexion",,
+"Test template",,,
 "The email template model (%s) is different than the entity generating the email (%s)","Le modèle du modèle d'email (%s) est différent du modèle générant l'email (%s)",,
 "There is already a default account","Il existe déjà une compte email par défaut.",,
 "There is no default email account","Il n'y a pas de compte email par défaut.",,
+"Thread ID",,,
 "To","À",,
 "Type","Type",,
 "Unable to reach server. Please check Host,Port and SSL/TLS","Impossible de contacter le serveur. Merci de vérifier l'hôte, le port et le SSL/TLS",,
