--- a/axelor-base/src/main/resources/i18n/messages_en.csv
+++ b/axelor-base/src/main/resources/i18n/messages_en.csv
@@ -1427,7 +1427,6 @@
 "Reference",,,
 "Reference Id",,,
 "Referential",,,
-"Refresh page to reflect changes in selection",,,
 "Refund blocking",,,
 "Region",,,
 "Region code",,,
@@ -1678,6 +1677,7 @@
 "Test connection",,,
 "Test connection to QAS webservice",,,
 "Test mapping service connection",,,
+"Test template",,,
 "Testing",,,
 "Text Alignment",,,
 "The analysis must be completed before the report can be printed.",,,
